--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -40,7 +40,7 @@
         <input type="file" id="add-file" placeholder="Novo Arquivo">
         <label name="label-add-DB">Adicionar em banco de dados?</label>
         <input type="checkbox" id="add-DB"/>
-        <input type="submit" value="Incluir">
+        <input type="submit" value="Upload">
     </form>
 
     <div id="spoiler">
