Adicionada estrutura base para a leitura do request POST como multipart. Isso envolve criação de ViewModels, ajuste nos controladores e nas páginas que exibem/preenchem os dados. Está pendente o resto da leitura e gravação correta em algum lugar do FS.

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -36,7 +36,7 @@
 <body>
     <h1>WebApi Download e Upload</h1>
     <h3>Incluir</h3>
-    <form action="javascript:void(0);" method="POST" onsubmit="addItem()">
+    <form id="main-form" action="javascript:void(0);" method="POST" onsubmit="addItem()">
         <input type="file" id="add-file" placeholder="Novo Arquivo">
         <label name="label-add-DB">Adicionar em banco de dados?</label>
         <input type="checkbox" id="add-DB"/>
