--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <title>WebApi Download e Upload</title>
     <style>
-        input[type='submit'], button, [aria-label] {
+        input[type='submit'], button {
             cursor: pointer;
         }
 
         #info {
             display: none;
             border: 1px solid;
+            border-color: black;
             padding: 2px;
+            color: red;
         }
 
         table {
@@ -28,6 +30,10 @@
         td {
             border: 1px solid;
             padding: 5px;
+        }
+
+        td.center {
+            text-align: center;
         }
 
         ul {
@@ -59,7 +65,6 @@
         <tr>
             <th>Nome Arquivo</th>
             <th>Banco de dados?</th>
-            <th></th>
             <th></th>
         </tr>
         <tbody id="arquivos"></tbody>
